[project]
name = "geomux"
version = "0.2.10"
description = "A tool to assign identifiers to cell barcodes"
authors = [{ name = "Noam Teyssier" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "adjustpy>=0.1.1",
    "anndata>=0.10.9",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
]

[project.scripts]
geomux = "geomux.__main__:main_cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "muxsim>=0.1.0",
    "black>=24.8.0",
]
