[project]
name = "geomux"
version = "0.4.3"
description = "A tool to assign identifiers to cell barcodes"
authors = [{ name = "Noam Teyssier" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "anndata>=0.10.9",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "typer>=0.16.0",
]

[project.scripts]
geomux = "geomux.__main__:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "muxsim>=0.1.0",
    "marimo>=0.14.17",
    "ruff>=0.12.9",
]
package = true
